Update JDK to 23 in the runtime